@@ -1,12 +1,12 @@
-#ifndef PDSCALIBDATA_CSPADMINIPEDESTALSV1_H
-#define PDSCALIBDATA_CSPADMINIPEDESTALSV1_H
+#ifndef PDSCALIBDATA_CSPAD2X2PIXELSTATUSV1_H
+#define PDSCALIBDATA_CSPAD2X2PIXELSTATUSV1_H
 
 //--------------------------------------------------------------------------
 // File and Version Information:
 // 	$Id$
 //
 // Description:
-//	Class CsPadMiniPedestalsV1.
+//	Class CsPad2x2PixelStatusV1.
 //
 //------------------------------------------------------------------------
 
@@ -24,7 +24,7 @@
 // Collaborating Class Headers --
 //-------------------------------
 #include "ndarray/ndarray.h"
-#include "pdsdata/cspad/Detector.hh"
+#include "pdsdata/cspad2x2/Detector.hh"
 
 //------------------------------------
 // Collaborating Class Declarations --
@@ -41,7 +41,7 @@ namespace pdscalibdata {
 /**
  *  @ingroup pdscalibdata
  *
- *  @brief Pedestals data for CsPad::MiniElementV1.
+ *  @brief Pixel status data for CsPad::MiniElementV1.
  *
  *  This software was developed for the LCLS project.  If you use all or 
  *  part of it, please give an appropriate acknowledgment.
@@ -51,28 +51,39 @@ namespace pdscalibdata {
  *  @author Andy Salnikov
  */
 
-class CsPadMiniPedestalsV1 : boost::noncopyable {
+class CsPad2x2PixelStatusV1 : boost::noncopyable {
 public:
 
   enum { Sections = 2 };
-  enum { Columns = Pds::CsPad::ColumnsPerASIC };
-  enum { Rows = Pds::CsPad::MaxRowsPerASIC*2 };
+  enum { Columns = Pds::CsPad2x2::ColumnsPerASIC };
+  enum { Rows = Pds::CsPad2x2::MaxRowsPerASIC*2 };
   enum { Size = Sections*Columns*Rows };
 
-  typedef float pedestal_t;
+  // NOTE: Using the same codes as in CspadCorrector
+  enum PixelStatus {
+    VeryHot=1,
+    Hot=2,
+    Cold=4
+  };
 
-  // Default constructor
-  CsPadMiniPedestalsV1 () ;
+  typedef uint16_t status_t;
 
-  // read pedestals from file
-  CsPadMiniPedestalsV1 (const std::string& fname) ;
+  /// Default constructor, all pixel codes set to 0
+  CsPad2x2PixelStatusV1 () ;
+
+  /**
+   *  Read all codes from file.
+   *
+   *  @throw std::exception
+   */
+  CsPad2x2PixelStatusV1 (const std::string& fname) ;
 
   // Destructor
-  ~CsPadMiniPedestalsV1 () ;
+  ~CsPad2x2PixelStatusV1 () ;
 
-  // access pedestal data
-  ndarray<pedestal_t, 3> pedestals() const {
-    return make_ndarray(m_pedestals, Columns, Rows, Sections);
+  // access status data
+  ndarray<status_t, 3> status() const {
+    return make_ndarray(m_status, Columns, Rows, Sections);
   }
 
 protected:
@@ -80,10 +91,10 @@ protected:
 private:
 
   // Data members
-  pedestal_t m_pedestals[Size];
+  status_t m_status[Size];
 
 };
 
 } // namespace pdscalibdata
 
-#endif // PDSCALIBDATA_CSPADMINIPEDESTALSV1_H
+#endif // PDSCALIBDATA_CSPAD2X2PIXELSTATUSV1_H
