@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-00
+2012-02-08 Andy Salnikov
+- renamed CsPadMini classes to CsPad2x2
+
 Tag: V00-02-00
 2011-12-10 Andy Salnikov
 - switch to using ndarray for arrays
